add ngrx and login/regi code

--- a/src/app/component/registar/registar.component.html
+++ b/src/app/component/registar/registar.component.html
@@ -1,3 +1,6 @@
+<div class="alert alert-dark" role="alert" *ngIf="isError | async as error">
+    {{error}}
+  </div>
 <div class="row">
     <div class="col-6">
         <form (ngSubmit)="submitForm()" [formGroup]="regiForm">
