--- a/src/app/component/dashbord/home/home.component.html
+++ b/src/app/component/dashbord/home/home.component.html
@@ -1,1 +1,32 @@
-<p>home works!</p>
+<div class="row">
+    <div class="col-8">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Id</th>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>Email</th>
+                    <th>Contact</th>
+                    <th>Edite</th>
+                    <th>Delete</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let item of homeTableData | async">
+                    <td>{{item.id}}</td>
+                    <td>{{item.firstName}}</td>
+                    <td>{{item.lastName}}</td>
+                    <td>{{item.email}}</td>
+                    <td>{{item.contact}}</td>
+                    <td><button class="btn btn-sm btn-success" [routerLink]="['update' , item.id]">edite</button></td>
+                    <td><button class="btn btn-sm btn-danger" type="button" (click)="deleteFun(item.id)">delete</button></td>
+                </tr>
+            </tbody>
+        </table>
+        <button class="btn btn-sm btn-success" [routerLink]="['/home/post']">go to post</button>
+    </div>
+    <div class="col-4">
+        <router-outlet></router-outlet>
+    </div>
+</div>
